[package]
name = "td_placeholder"
version = "0.1.0"
authors = ["dawidstrom <dawid.strom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.8.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
function_name = "0.2.0"
